--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         James Ostergaard
         </p>
         <p id="bio">
-        I'm a Web Developer with a passion for UX/UI
+        Designer/Development
         <br>
         <br>
         </p>
         <p id="secondary">
-          I'm located in Orange County, CA
+        Orange County, CA
 
         <!--I design for the moment-->
         </p>
