--- a/projects/ethicsviz.html
+++ b/projects/ethicsviz.html
@@ -22,64 +22,40 @@
   <body>
     <div class="base">
       <div class="about">
-        <br>
-        <br>
         <a href="http://jamesostergaard.com" id="title">James Ostergaard</a>
-        <br>
-        <br>
-        <br>
+        <hl>
         <a href="#" id="projectTitle" target="_blank">EthicsViz</a>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="columns">
-          <div id="accom">
-            <p id="secondary">
-              Accomplished
-            </p>
-            <p id="tertiary">
-              <ul>
-              <li>Data Visualization</li><li>Data Collection</li><li>Data Manipulation and Analysis</li>
-            </ul>
-            </p>
-          </div>
-          <div id="tools">
-            <p id="secondary">
-              Tools
-            </p>
-            <p id="tertiary">
-              <ul>
-
-              <li>Competitor Research</li><li>Data Gathering</li><li>Data Analysis</li><li>Data Visualization</li><li>Python</li><li>JavaScript</li><li>HTML/CSS</li><li>D3 Library</li><li>Spotify API</li><li>Natural Language Processing</li>
-            </ul>
-          </p>
-          </div>
-        </div>
       </div>
       <div class="projects">
 
         <div class="description">
-          EthicsViz helps people look into the pervasive data associated with their digital footprint.
+
+          <p>
+          Design: Pervasive Data Visualization
           <br>
+          Development: Data Analysis, Data Combining
+          <br>
+          Description: EthicsViz helps people look into the pervasive data associated with their digital footprint.
+          </p>
+          <p>
           The concept was to gather available data from multiple sources; Google Takeout, Spotify Data Request.
           <br>
           The data is available free to the users, as well as companies, and other partners.
-          <br>
-          By building a tool to visualize personal data, we could present to users the kinds of inferrences that companies with access to this data could make about them as users.
-          <br>
-          The image below is a mockup of a conceptual visualization combining Google Search and Spotify listening history over one particular week.
-          <br>
-          By marking each data point with a sentiment value, we could reflect the mood of the user and present patterns in their behavior.
+          </p>
           <br>
           <img src="../images/ethicsviz1.PNG" class="ptrdesktop">
+          <p>
+          By building a tool to visualize personal data, we could present to users the kinds of inferrences that companies with access to this data could make about them as users.
           <br>
-          Below is a running prototype of the above conveptual visualization. Combining data sources to present hourly sentiment analysis over one week of data collection.
+          The image above is a mockup of a conceptual visualization combining Google Search and Spotify listening history over one particular week.
           <br>
+          By marking each data point with a sentiment value, we could reflect the mood of the user and present patterns in their behavior.
+          </p>
           <img src="../images/ethicsviz2.PNG" class="ptrdesktop">
-          <br>
+          <p>
+          Above is a running prototype of the above conveptual visualization. Combining data sources to present hourly sentiment analysis over one week of data collection.
+          </p>
           What was important about this project was understanding what data in a set is important, and what can be expanded. By running data through a sentiment analysis processor, we were able to bring a new element into the visualization and create a more intuative presentation of users' data.
-          <br/>
         </div>
 
       </div>
