--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -22,67 +22,40 @@
   <body>
     <div class="base">
       <div class="about">
-        <br>
-        <br>
         <a href="http://jamesostergaard.com" id="title">James Ostergaard</a>
-        <br>
-        <br>
-        <br>
+        <hr>
         <a href="http://praytherosary.nyc" id="projectTitle" target="_blank">praytherosary.nyc</a>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="columns">
-          <div id="accom">
-            <p id="secondary">
-              Accomplished
-            </p>
-            <p id="tertiary">
-              <ul>
-              <li>Design Website</li>
-              <li>Branding</li>
-              </ul>
-            </p>
-          </div>
-          <div id="tools">
-            <p id="secondary">
-              Tools
-            </p>
-            <p id="tertiary">
-              <ul>
-            <li>Sketching</li><li>Wireframing</li><li>Prototyping</li><li>Mockups</li><li>Front-end Development
-            </li><li>Interaction Design</li><li>HTML/CSS</li><li>Balsamiq</li>
-          </ul>
-          </p>
-          </div>
-        </div>
       </div>
       <div class="projects">
-
         <div class="description">
-          A solemn, minimalistic website to guide users through prayers of the rosary.
-          <br>
           <img src="../images/ptr.PNG" class="ptrdesktop">
+          <p>
+          Design: Minimalist, Insightful
           <br>
-          The user journey was predetermined by the content of the system(the prayer).
-            My focus was on creating an engaging experience.
-            This was done by adding images that corresponded to the text, which seems simple, but the competitors websites required studying the images and text before being able to put them together.
-            My system was designed to be accessible to all users, regardless of exposure to praying the rosary
+          Development: Responsive, Intuitive
           <br>
-          <br>
-          <img src="../images/ptr1.PNG" class="ptrdesktop">
-          <br>
-          <img src="../images/ptr2.png" class="ptrdesktop_inline">
-          <br>
-          The Meditation aspect of daily rosary prayers is automatically updated each day, creating an intitive experience.
-          <br>
-          <img src="../images/ptr3.png" class="ptrdesktop_inline">
-          <br>
-          The experience and interactions that this system creates are religious because they are repetitive.
-          The color palette of muted white, brown and pink create an atmosphere of solemnity, enhanced by the lack of distractions.
-        </div>
+          Description: A walk-through guide for rosary prayers.
 
+          </p>
+          <img src="../images/ptr1.PNG" class="ptrdesktop">
+          <p>
+            Initial wireframes focused on creating a pattern based on an image of the rosary beads followed by the accompanying prayer.
+          </p>
+          <img src="../images/ptr4.png" class="ptrdesktop_inline">
+          <p>
+            A minimal representation of the beads of the rosary became the icon which accompanied the prayers.
+            <br>
+            The current bead is represented by a light red highlight.
+          </p>
+          <img src="../images/ptr3.png" class="ptrdesktop_inline">
+          <p>
+            The mysteries of the rosary prayers change daily.
+            <br>
+            Using JQuery, praytherosary.nyc makes that change seamless.
+          </p>
+          Through a minimalist and visually intuitive design, praytherosary.nyc creates a focused prayer environment.
+        </div>
+        </div>
       </div>
 
   </div>
