--- a/projects/theatrenow.html
+++ b/projects/theatrenow.html
@@ -22,74 +22,40 @@
   <body>
     <div class="base">
       <div class="about">
-        <br>
-        <br>
         <a href="http://jamesostergaard.com" id="title">James Ostergaard</a>
-        <br>
-        <br>
-        <br>
+        <hr>
         <a href="http://theatrenow.azurewebsites.net/main/home.html" id="projectTitle">TheatreNow</a>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="columns">
-          <div id="accom">
-            <p id="secondary">
-              Accomplished
-            </p>
-            <p id="tertiary">
-              <ul>
-              <li>Collaborative Website Design</li><li>Rapid Prototyping</li><li>Sponsor Approval</li><li>Social Media Marketing Generator Design</li>
-            </ul>
-            </p>
-          </div>
-          <div id="tools">
-            <p id="secondary">
-              Tools
-            </p>
-            <p id="tertiary">
-              <ul>
-                <li>Sketching</li><li>Wireframing</li><li>Prototyping</li><li>Mockups</li><li>Iterative Front-end Dev
-              </li><li>Interaction Design</li><li>Team Management</li><li>Requirements Pivot</li><li>User research</li><li>Personas</li><li>User Stories</li><li>Storyboards</li><li>HTML/CSS</li><li>Adobe XD</li><li>Figma</li>
-            </ul>
-          </p>
-          </div>
-        </div>
       </div>
       <div class="projects">
 
         <div class="description">
-          An intuitive theatrical rights acquisition website
-          <br>
-          Our UX team worked collaboratively on developing a high-fidelity prototype website. Initially creating mockups in AdobeXD such as the one below.
-          <br>
-          <img src="../images/theatrenow1.PNG" class="ptrdesktop">
-          <br>
-          During each sprint we came together and evaluated our current designs before moving on to the next prototype phase.
-          <br>
-          The image below represents the result of a design meeting and an interface redesign implemented in a high-fidelity prototype.
-          <br>
-          <img src="../images/theatrenow2.png" class="ptrdesktop">
-          <br>
-          <br>
-          Over the 20 weeks this project covered, our sponsors presented us with a requirements pivot which changed the basis of our entire design concepts.
-          <br>
-          We began to redesign and prototype based on the new requirements, as well as create new features.
-          <br>
           <img src="../images/theatrenow3.png" class="ptrdesktop">
+          <p>
+          Design: Personalized, Intuitive
           <br>
-          One feature which contributed to the success of the redesign was a social media content generator.
+          Development: Agile, High-Fidelity Prototype
           <br>
-          The main users of this system are high school theater programs, and our website was designed to make marketing their productions seamless.
+          Description: Theatrical rights acquisition and management website
+          </p>
+          <img src="../images/theatrenow1.PNG" class="ptrdesktop">
+          <p>
+          Our UX team worked collaboratively on developing a high-fidelity prototype website.
           <br>
-          I designed a simple social media post generator which users could populate with their own data and instantly share across platforms to market their production.
+          Initially creating mockups in AdobeXD such as the one above.
           <br>
+          The image below represents the result of a design meeting and an interface redesign I implemented as an html prototype.
+          </p>
+          <img src="../images/theatrenow2.png" class="ptrdesktop">
+          <p>
+          I designed a social media post generator using html forms and html canvas.
+          <br>
+          It allows users to quickly customize a shareable image to market their production.
+          </p>
           <img src="../images/theatrenow4.png" class="ptrdesktop">
-          <br>
+          <p>
           This generator can be used for multiple types of social media post, allowing for consistency with each production, and convenience for users.
-          <br>
-          What was important for this project was seeing users needs, understanding the sponsor needs and requirements, and going above and beyond when designing.
+          </p>
+          What was important for this project was seeing users needs, and going above and beyond when designing features.
         </div>
 
       </div
