--- a/projects/healthful.html
+++ b/projects/healthful.html
@@ -22,48 +22,23 @@
   <body>
     <div class="base">
       <div class="about">
-        <br/>
-        <br/>
         <a href="http://jamesostergaard.com" id="title">James Ostergaard</a>
-        <br><br/>
-        <br/>
+        <hr>
         <a href="https://josterga.github.io/INF172-W19.github.io/index.html" id="projectTitle" target="_blank">Healthful</a>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <div class="columns">
-          <div id="accom">
-            <p id="secondary">
-              Accomplished
-            </p>
-            <p id="tertiary">
-              <ul>
-              <li>Technology Lead</li><li>Branding</li>
-            </ul>
-            </p>
-          </div>
-          <div id="tools">
-            <p id="secondary">
-              Tools
-            </p>
-            <p id="tertiary">
-              <ul>
-              <li>Front-End Dev</li><li>Photoshop</li><li>HTML</li><li>CSS</li><li>User Research
-              </ul>
-          </p>
-          </div>
-        </div>
       </div>
       <div class="projects">
-
         <div class="description">
-          A front-end project for a biomedical team
-          <br>
           <img src="../images/healthful.png" class="ptrdesktop">
+          <p>
+          Design: Concise, Informative
           <br>
+          Development: User Research, Information Sourcing
+          <br>
+          Description: A front-end project for a biomedical team
+          </p>
+          <p>
           The concept for this website is to function as a reliable hub of emerency information commonly needed by college students.
-          <br>
+          </p>
           By combining user research with design evaluation, we were able to create a high-fidelity mockup of a dynamic website providing resources based on location.
         </div>
 
