--- a/projects/healthful.html
+++ b/projects/healthful.html
@@ -30,7 +30,7 @@
         <div class="description">
           <img src="../images/healthful.png" class="ptrdesktop">
           <p>
-          Design: Concise, Informative
+          Design: Concise, Informative, Branding
           <br>
           Development: User Research, Information Sourcing
           <br>
