--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
         <div class="project" id="ethicsviz">
           <a href="./projects/ethicsviz.html">EthicsViz</a>
         </div>
+        <!--
+        <div class="project" id="list">
+          <a href="./projects/list.html">List</a>
+        </div>-->
       </div>
   </body>
 </html>
