--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
         <!--
         <div class="project" id="list">
           <a href="./projects/list.html">List</a>
-        </div>-->
+        </div>
       </div>
+      <div class="projects">
+        <p id="dv">Ongoing Projects</p>
+        <div class="project" id="list">
+          <a href="./projects/list.html">List</a>
+        </div>
+      </div>-->
   </body>
 </html>
