--- a/projects/List.html
+++ b/projects/List.html
@@ -32,6 +32,11 @@
       <div class="projects">
 
         <div class="description">
+          List is a finance visualization tool for college students
+          <br>
+          Its purpose is to visualize proportion cost of a list of items within a set budget.
+          <br>
+          The goal of this project is to allow people to make their own insights about how they spend money.
           <div id="charts" style="overflow-x:auto;">
             <div class="controls" style="Display: inline-block;">
               <input type="button" value="x" id="clear" style="border-radius: 50%;">
