--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
         <div class="project" id="ethicsviz">
           <a href="./projects/ethicsviz.html">EthicsViz</a>
         </div>
+      <div class="projects">
+        <p id="dv">Problem Solving Examples</p>
+        <div class="project" id="candid">
+          <a href="./projects/candid.html">Candid</a>
+        </div>
         <!--
         <div class="project" id="list">
           <a href="./projects/list.html">List</a>
