--- a/projects/candid.html
+++ b/projects/candid.html
@@ -27,11 +27,11 @@
       </div>
       <div class="projects">
         <div class="description">
-          <img src="../images/sheets.png" class="ptrdesktop">
+          <img src="../images/sheets.PNG" class="ptrdesktop">
           <p>
-          Design: Concise, Informative, Branding
+          Design: Data visualization, Data presentation
           <br>
-          Development: User Research, Information Sourcing
+          Development: User Research, Prototyping
           <br>
           Description: Goal Management Dashboard in Google Sheets
           </p>
@@ -39,7 +39,7 @@
           At Candid I found most data is stored in Sheets and manually copied into Google Forms for delivery. When I began in December '19 the data delivery process which was
           shown to me was entirely manual; each data value had to be searched and calculated by hand. These data values are consistent with each day, and I immediately saw a
           more intuitive approach to that process. My concept was a google sheet which held the calculated values for the current day so users could look at it and simply populate the
-          delivery form. 
+          delivery form.
           <br>
           The above image is a mock of how the system should function. It is a tab in a sheet that pulls daily data from another sheet and visualizes it by location total, individual total, and metric total.
           <br>
@@ -52,15 +52,17 @@
         </p>
         </div>
         <div class="description">
-          <img src="../images/draft.png" class="ptrdesktop">
+          <img src="../images/draft.PNG" class="ptrdesktop">
           <p>
-          Design: Concise, Informative, Branding
+          Design: Brand expansion, accessibility
           <br>
-          Development: User Research, Information Sourcing
+          Development: User research, prototyping
           <br>
           Description: Google Review QR Cards
           </p>
           <p>
+          The above image is a prototype of QR Cards used to increase Google Review engagement
+          <br>
           Getting Google review recognition is crucial to the success and traffic flow of a startup, or any business. With this business need in mind, I observed how reviews were presented
           to people, which was mainly verbal and with one stationary QR code at the physical location. I observed the lack of opportunity for people to engage with it and leave a review,
           mainly beacuse of lack of time, and forgetting to leave a review.
