--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
         <div class="project" id="ethicsviz">
           <a href="./projects/ethicsviz.html">EthicsViz</a>
         </div>
+        </div>
       <div class="projects">
         <p id="dv">Problem Solving Examples</p>
         <div class="project" id="candid">
           <a href="./projects/candid.html">Candid</a>
+        </div>
         </div>
         <!--
         <div class="project" id="list">
