--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         </p>
         <p id="tertiary">
           I design for the moment
+          <br>
+          with clarity and accessibility
+          <br>
+          to solve problems and increase self-reflection.
         <!-- Life is chaos, designed
         <br>
         Design is history, valued
