--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
         <div class="project" id="candid">
           <a href="./projects/candid.html">Candid</a>
         </div>
+        <div class="project" id="candid">
+          <a href="./projects/covid-19.html">Covid-19</a>
+        </div>
         </div>
         <!--
         <div class="project" id="list">
