--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
         <div class="project" id="candid">
           <a href="./projects/candid.html">Candid</a>
         </div>
-        <div class="project" id="candid">
+        <!--  <div class="project" id="covid">
           <a href="./projects/covid-19.html">Covid-19</a>
         </div>
         </div>
-        <!--
+
         <div class="project" id="list">
           <a href="./projects/list.html">List</a>
         </div>
