--- a/projects/candid.html
+++ b/projects/candid.html
@@ -33,48 +33,33 @@
           <br>
           Development: User Research, Prototyping
           <br>
-          Description: Goal Management Dashboard in Google Sheets
+          Description: KPI Management Dashboard in Google Sheets
           </p>
           <p>
-          At Candid I found most data is stored in Sheets and manually copied into Google Forms for delivery. When I began in December '19 the data delivery process which was
-          shown to me was entirely manual; each data value had to be searched and calculated by hand. These data values are consistent with each day, and I immediately saw a
-          more intuitive approach to that process. My concept was a google sheet which held the calculated values for the current day so users could look at it and simply populate the
-          delivery form.
+          I created a Google Sheets tool to help manage KPI in real-time for a retail location.
           <br>
-          The above image is a mock of how the system should function. It is a tab in a sheet that pulls daily data from another sheet and visualizes it by location total, individual total, and metric total.
+          The above image is a mock of how the system should function. It pulls live data from a sheet and visualizes the relevant KPI values.
           <br>
-          All values are added based on the current day which is automatically updated in the blue cell upper right. That cell is changeable for looking back at other days.
+          I built this sheets tool to streamline the KPI management process for my team. It improves our efficiency and recognition of important data.
           <br>
-          I took it upon myself to streamline that process for my team and built a google sheet that automatically displays the values needed to enter in the form. This tool
-          decreased the time spent on data entry and locating, but relies on data being correctly entered. Since I have developed this, it has been put to use by two other studios.
-          <br>
-          The goal was to build an at-a-glance status of the day which could aid in calculating and entering data at close.
+
         </p>
         </div>
         <div class="description">
           <img src="../images/draft.PNG" class="ptrdesktop">
           <p>
-          Design: Brand expansion, accessibility
+          Design: Brand expansion, Accessibility
           <br>
           Development: User research, prototyping
           <br>
-          Description: Google Review QR Cards
+          Description: Google Review/Marketing QR Cards
           </p>
           <p>
-          The above image is a prototype of QR Cards used to increase Google Review engagement
-          <br>
-          Getting Google review recognition is crucial to the success and traffic flow of a startup, or any business. With this business need in mind, I observed how reviews were presented
-          to people, which was mainly verbal and with one stationary QR code at the physical location. I observed the lack of opportunity for people to engage with it and leave a review,
-          mainly beacuse of lack of time, and forgetting to leave a review.
+          The above image is a prototype of QR Cards used to increase Google Review engagement and location marketing.
           </p>
-          I consulted my coworkers and began to design a physical QR code that could be given to people, which would help them remember to leave a review, allowing us to increase those numbers.
+          I designed a physical card that exposed our brand and increased accessibility to leaving Google Reviews.
           <br>
-          The initial design was simple, the QR code, a short instruction with a secondary option in the case that someone does not have access to QR, and the branding and encouragement to leave a review.
-          <br>
-          This development was focused on printing 20 QR codes on one piece of paper and later laminating for longevity.
-          <br>
-          Since the introduction of these QR cards our numbers of reviews have increased, and they bring more accessibility an mobility to getting reviews on-the-spot.
-
+          Development was focused on efficiency and urgency. 20 of these cards can be printed and distributed from one piece of paper. 
         </div>
 
       </div>
