--- a/projects/ethicsviz.html
+++ b/projects/ethicsviz.html
@@ -54,7 +54,9 @@
           <img src="../images/ethicsviz2.PNG" class="ptrdesktop">
           <p>
           Above is a running prototype of the above conveptual visualization. Combining data sources to present hourly sentiment analysis over one week of data collection.
-          </p>
+        </br>
+        The data is collected by a user and processed through a python script, which outputs the data visualization written in HTML and JavaScript using the D3 Visualization Library.
+      </p>
           What was important about this project was understanding what data in a set is important, and what can be expanded. By running data through a sentiment analysis processor, we were able to bring a new element into the visualization and create a more intuative presentation of users' data.
         </div>
 
