--- a/projects/healthful.html
+++ b/projects/healthful.html
@@ -30,7 +30,7 @@
         <div class="description">
           <img src="../images/healthful.png" class="ptrdesktop">
           <p>
-          Design: Concise, Informative, Branding
+          Design: Educational, Branding-Focused
           <br>
           Development: User Research, Information Sourcing
           <br>
@@ -38,8 +38,10 @@
           </p>
           <p>
           The concept for this website is to function as a reliable hub of emerency information commonly needed by college students.
+          </br>
+          The content is taken from trusted sources and designed to be easily accessible.
           </p>
-          By combining user research with design evaluation, we were able to create a high-fidelity mockup of a dynamic website providing resources based on location.
+          By combining user research with design evaluation, we were able to create a high-fidelity mockup of a dynamic website providing emergency resources based on location.
         </div>
 
       </div>
