--- a/projects/theatrenow.html
+++ b/projects/theatrenow.html
@@ -31,7 +31,7 @@
         <div class="description">
           <img src="../images/theatrenow3.png" class="ptrdesktop">
           <p>
-          Design: Personalized, Intuitive
+          Design: Personalized, Modular
           <br>
           Development: Agile, High-Fidelity Prototype
           <br>
