--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -30,9 +30,9 @@
         <div class="description">
           <img src="../images/ptr.PNG" class="ptrdesktop">
           <p>
-          Design: Minimalist, Insightful
+          Design: Minimalist, Self-Reflective
           <br>
-          Development: Responsive, Intuitive
+          Development: Mobile-First, Fluid
           <br>
           Description: A walk-through guide for rosary prayers.
 
@@ -43,17 +43,17 @@
           </p>
           <img src="../images/ptr4.png" class="ptrdesktop_inline">
           <p>
-            A minimal representation of the beads of the rosary became the icon which accompanied the prayers.
+            A minimal visual representation of the beads of the rosary became the icon which accompanied each prayer.
             <br>
-            The current bead is represented by a light red highlight.
+            The current prayer corresponding bead is represented by a light red highlight.
           </p>
           <img src="../images/ptr3.png" class="ptrdesktop_inline">
           <p>
-            The mysteries of the rosary prayers change daily.
+            Prayers change daily, and the system updates accordingly.
             <br>
-            Using JQuery, praytherosary.nyc makes that change seamless.
+            Using JQuery, praytherosary.nyc always displays the correct daily prayer.
           </p>
-          Through a minimalist and visually intuitive design, praytherosary.nyc creates a focused prayer environment.
+          Through a minimalist and visually intuitive design, praytherosary.nyc creates a focused environment.
         </div>
         </div>
       </div>
