--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
         </div>
       <div class="projects">
-        <p id="dv">Finding Solutions</p>
+        <p id="dv">Problem Solving</p>
         <div class="project" id="candid">
           <a href="./projects/candid.html">Candid</a>
         </div>
