big redesign, removing portfolio replacing with ar filters

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <!--Stylesheet-->
-    <link rel = "stylesheet" media="screen and (min-width: 370px)" href="./stylesheets/mobileStyle.css">
-    <link rel = "stylesheet" media="screen and (min-width: 900px)" href="./stylesheets/indexStyle.css">
+    <link rel = "stylesheet"  href="./stylesheets/indexStyle.css">
 
     <!--Google Font-->
     <link href="https://fonts.googleapis.com/css?family=Antic+Slab|Bree+Serif|Comfortaa|Merriweather&display=swap" rel="stylesheet">
@@ -26,7 +25,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
     <!--Descriptions-->
-    <title>James Ostergaard: User Experience Designer</title>
+    <title>James Ostergaard</title>
     <meta name="Description" content="Portfolio for James Ostergaard.">
     <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
 
@@ -34,74 +33,38 @@
 
   <body>
       <div class="about">
+
         <p id="title">
         James Ostergaard
         </p>
-        <p id="bio">
-        Designer/Development
-        <br>
-        <br>
-        </p>
-        <p id="secondary">
-        Orange County, CA
 
-        <!--I design for the moment-->
+        <p id="location">
+        Orange County, CA
         </p>
-        <p id="tertiary">
-          I design for the moment
-          <br>
-          with clarity and accessibility
-          <br>
-          to solve problems and increase self-reflection.
-        <!-- Life is chaos, designed
-        <br>
-        Design is history, valued
-        <br>
-        Value is reaction, reproduced -->
-        </p>
+
+      </div>
+
+
+      <div class="project">
+
+        <a href="https://open.spotify.com/artist/4ADpqFrA7cjcB68WwZdC93?si=pZRxfzQFRaiPu-wtvBB8Zg">parclo music</a>
+        <p>lo-fi hiphop on Spotify</p>
+
+      </div>
+
+      <div class="project">
+
+        <a href="./arportfolio/arportfolio.html">AR Portfolio</a>
+        <p>face filters on Instagram</p>
+
+      </div>
+
+      <div class="social">
+
         <a href="mailto:james@jamesostergaard.com">email</a>
         <a href="https://www.linkedin.com/in/jamesostergaard/">linkedin</a>
-      </div>
-      <div class="projects">
-        <p id="ux">UX Projects</p>
-        <div class="project" id="ptr">
-            <a href="./projects/praytherosarynyc.html">praytherosary.nyc</a>
-          </div>
-          <div class="project" id="apples">
-            <a href="./projects/theatrenow.html">TheatreNow</a>
-          </div>
-          <div class="project" id="healthful">
-            <a href="./projects/healthful.html">Healthful</a>
-          </div>
-          <div class="project" id="groupme">
-            <a href="./projects/groupme.html">GroupMe</a>
-          </div>
-        </div>
-      <div class="projects">
-        <p id="dv">Data Visualization Projects</p>
-        <div class="project" id="ethicsviz">
-          <a href="./projects/ethicsviz.html">EthicsViz</a>
-        </div>
-        </div>
-      <div class="projects">
-        <p id="dv">Problem Solving</p>
-        <div class="project" id="candid">
-          <a href="./projects/candid.html">Candid</a>
-        </div>
-        <!--  <div class="project" id="covid">
-          <a href="./projects/covid-19.html">Covid-19</a>
-        </div>
-        </div>
 
-        <div class="project" id="list">
-          <a href="./projects/list.html">List</a>
-        </div>
       </div>
-      <div class="projects">
-        <p id="dv">Ongoing Projects</p>
-        <div class="project" id="list">
-          <a href="./projects/list.html">List</a>
-        </div>
-      </div>-->
+
   </body>
 </html>
