--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
   <body>
       <div class="about">
 
-        <p id="title">
-        James Ostergaard
-        </p>
+
+        <a id="title" href="http://jamesostergaard.com/">James Ostergaard</a>
 
         <p id="location">
         Orange County, CA
@@ -54,7 +53,7 @@
 
       <div class="project">
 
-        <a href="./arportfolio/arportfolio.html">AR Portfolio</a>
+        <a href="./arportfolio.html">AR Media</a>
         <p>face filters on Instagram</p>
 
       </div>
