--- a/arportfolio.html
+++ b/arportfolio.html
@@ -34,12 +34,12 @@
   <body>
       <div class="about">
 
-        <p id="title">
-        James Ostergaard
-        </p>
+
+        <a id="title" href="http://jamesostergaard.com/">James Ostergaard</a>
+
 
         <p id="location">
-        AR Portfolio
+        AR Media
         </p>
 
       </div>
@@ -47,35 +47,45 @@
 
       <div class="project_filter">
 
-        <a href="./arportfolio/travisscottburger.html">Travis Scott Burger</a>
+        <p class="name">Travis Scott Burger</p>
+        <a href="#" class="instagram">Open in Instagram</a>
+        <br/><br/>
         <img src="../images/TravisScottBurger/icon.png"</img>
 
       </div>
 
       <div class="project_filter">
 
-        <a href="./arportfolio/sofargone.html">So Far Gone</a>
+        <p class="name">So Far Gone</p>
+        <a href="#" class="instagram">Open in Instagram</a>
+        <br/><br/>
         <img src="../images/SoFarGone/icon.png"</img>
 
       </div>
 
       <div class="project_filter">
 
-        <a href="./arportfolio/swagemoji.html">Swag Emoji</a>
+        <p class="name">Swag Emoji</p>
+        <a href="#" class="instagram">Open in Instagram</a>
+        <br/><br/>
         <img src="../images/SwagEmoji/icon.png"</img>
 
       </div>
 
       <div class="project_filter">
 
-        <a href="./arportfolio/gotglizzy.html">Got Glizzy</a>
+        <p class="name">Got Glizzy</p>
+        <a href="#" class="instagram">Open in Instagram</a>
+        <br/><br/>
         <img src="../images/GotGlizzy/icon.png"</img>
 
       </div>
 
       <div class="project_filter">
 
-        <a href="./arportfolio/hogan.html">Hogan</a>
+        <p class="name">Hogan</p>
+        <a href="#" class="instagram">Open in Instagram</a>
+        <br/><br/>
         <img src="../images/Hogan/icon.png"</img>
 
       </div>
