for days affiliate link

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
 
       </div>
 
+      <div class="project">
+
+        <a href="https://shareasale.com/r.cfm?b=1661296&u=2717435&m=103243&urllink=&afftrack=0">For Days </a>
+        <p>zero waste clothing</p>
+
+      </div>
+
+
       <div class="social">
 
         <a href="mailto:james@jamesostergaard.com">email</a>
