for days link, update wording

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <div class="project">
 
-        <a href="./arportfolio.html">AR Media</a>
+        <a href="./arportfolio.html">AR Design</a>
         <p>face filters on Instagram</p>
 
       </div>
